clean up on index

--- a/index.html
+++ b/index.html
@@ -91,10 +91,6 @@
                       </center>
                   </div>
 
-                  <!--Background Slider Navigation-->         
-                  <ul id="slide-list"></ul>
-                  <!-- Background Slider Holder -->
-                  <!--<ul id="supersized"></ul>-->
               </div>
 
 
@@ -134,13 +130,7 @@
                     </li>   
                     <li>
                         <img src="images/eleo-2013-3s.jpg" alt="ELEO Conference Interviews" />   
-                    </li>
-                    <li>                            
-                        <img src="images/eleo-2013-4s.jpg" alt="ELEO Conference Volunteers" />                                                 
-                    </li>
-                    <li>
-                        <img src="images/eleo-2013-5s.jpg" alt="ELEO Conference" />                        
-                    </li>                       
+                    </li>                      
                 </ul>
                 <div class="clear"></div>
                 <a id="featured_work_prev" class="prev" href="#"></a>
@@ -322,9 +312,6 @@
                         <p class="info bottom-20" style="color:white;">ELEO will donate all proceeds to third world medical treatments via Watsi </p>       
 
                 Watsi is a global crowdfunding platform for healthcare that enables anyone to donate as little as $5 to directly fund life-changing medical care for people in need. 100% of every donation funds medical care and they are dedicated to complete transparency. ELEO is partnering with Watsi to donate all proceeds from the conference to fund life-changing healthcare for people around the world.
-                <!--<div class="top-20">
-                    <a href="http://watsi.org" target="_blank" class="button green slow-scroll">watsi.org</a>
-                </div> -->
                 <br /><br />             
             </div>
 
@@ -490,72 +477,13 @@
             <p>ELEO Conference is a one-day conference in Silicon Valley. Come hear from entrepreneurs, CEOs and VCs about what it takes to lead a company.</p>
         </div>
         
-      <div class="clear"></div>
-
-      <!--START OF EVENTBRITE TICKET PAGE HTML -->
-      <!--<div id="eventbrite" class="hide" style="width:100%; text-align:left; display:none" >
-        <iframe  src="https://www.eventbrite.com/tickets-external?eid=7644098705&ref=etckt" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true">
-        </iframe>
-        <div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" >
-            <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets Online</a> 
-            <span style="color:#ddd;">through</span> 
-            <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a>
-        </div>
-        </div>
-    </div>-->
-    <!--END OF EVENTBRITE TICKET PAGE-->         
+      <div class="clear"></div>      
 
 </div>
 <div class="full_width map">
 
 </div>
-<!--<div class="full_width">
-    <div class="about_slider_background">
-        <div class="testimonial_slider_holder slider_holder">
-            <div class="testimonial-top-line"></div>
-            <ul id="testimonial" class="slides testimonial">                          
-                <li>
-                    <div class="testimonial-image left">
-                        <img src="images/quote-jim-collins.jpg" alt="" />
-                    </div>
 
-                    <div class="right testimonial-content">
-                        <p class="testimonial-text white-text">
-                            For, in the end, it is impossible to have a great life unless it is a meaningful life. And it is very difficult to have a meaningful life without meaningful work.
-                        </p>
-                        <p class="testimonial-author top-30 white-text">Jim Collins</p>
-                    </div>
-                    <div class="clear"></div>                               
-                </li>
-                <li>
-                  <div class="testimonial-image left">
-                    <img src="images/user_img.png" alt="" />
-                </div>
-
-                <div class="right testimonial-content">
-                    <p class="testimonial-text white-text">
-                        The difference between a Designer and Developer, when it comes to design skills, is the difference between shooting a bullet and throwing it.
-                    </p>
-                    <p class="testimonial-author top-30 white-text">Scott Hanselman</p>
-                </div>
-                <div class="clear"></div>       
-            </li>
-            <li>
-             <div class="testimonial-image left">
-                <img src="images/user_img.png" alt="" />
-            </div>
-
-            <div class="right testimonial-content">
-                <p class="testimonial-text white-text">
-                    The difference between a Designer and Developer, when it comes to design skills, is the difference between shooting a bullet and throwing it.
-                </p>
-                <p class="testimonial-author top-30 white-text">Scott Hanselman</p>
-            </div>
-            <div class="clear"></div>       
-        </li>       
-    </ul>
-    <div id="testimonial_pager" class="carousel_pagination left"></div>
-    <div class="clear"></div>-->
 </div>
 </div>  
 
@@ -686,31 +614,7 @@
 </div>                              
 </div>                      
 
-<!--FAQ-->
-<!--
-<div id="faq" class="clear about section block">
-    <div class="block content-960 center-relative"> 
-        <h2 class="section-title montserrat-font">QUESTIONS?</h2>
-        <div class="title-separator"></div>                     
-        <p class="info">Inspiring and Equipping Entrepreneurs to Lead</p>       
-
-        <div class="one top-80 bottom-100">
-            <div class="accordion">
-                <p><b>Why is ELEO Conference hosted at a church?</b></p>
-                <div>Vestibulum eu mauris eu eros auctor ultricies. Praesent sem elit, convallis id neque at, eleifend auctor lorem. Curabitur eu placerat elit, sed tincidunt elit.</div>
-                <p><b>Why is ELEO donating all proceeds to Watsi?</b></p>
-                <div>Vestibulum eu mauris eu eros auctor ultricies. Praesent sem elit, convallis id neque at, eleifend auctor lorem. Curabitur eu placerat elit, sed tincidunt elit.</div>
-                <p><b>Can I register at the door?</b></p>
-                <div>Vestibulum eu mauris eu eros auctor ultricies. Praesent sem elit, convallis id neque at, eleifend auctor lorem. Curabitur eu placerat elit, sed tincidunt elit.</div>
-            </div>
-        </div>
-
-        <div class="clear"></div>
-
-    </div>
-</div>
--->
-
+<!-- SHARE BUTTONS -->
 <div class="fixed-block">
                         <div class="morph-button morph-button-inflow morph-button-inflow-2">
                             <button type="button"><span>Share this event</span></button>
