--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
         <span class="snippet">Gains +10 in charisma with his beard while he helps lead mobile design at Yahoo.</span>
             <div class="small-social">
-                <a href="https://twitter.com/robertoortiz"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="https://twitter.com/robertoortiz"><img src="images/twitter-small.png" alt=""></a>
+                <a href="http://www.linkedin.com/in/robertoortizux/"><img src="images/linkedin.png"></a>       
             </div>
     </div>
 </div>
@@ -529,7 +530,8 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder</span>
         <span class="snippet">Jerry's company was acquired last year and he now (legally) hacks on Yahoo Fantasy Sports Apps.</span>
             <div class="small-social">
-                <a href="https://twitter.com/bignoggins"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="https://twitter.com/bignoggins"><img src="images/twitter-small.png" alt=""></a> 
+                <a href="http://www.linkedin.com/in/bignoggins"><img src="images/linkedin.png"></a>             
             </div>
     </div>
 </div>
@@ -542,7 +544,8 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder and Coordinator</span>
         <span class="snippet">Charlena lives and breathes her mission in empowering women and their businesses.</span>
             <div class="small-social">
-                <a href="http://www.twitter.com/charlenaortiz "><img src="images/twitter-small.png" alt=""></a>       
+                <a href="http://www.twitter.com/charlenaortiz "><img src="images/twitter-small.png" alt=""></a>
+                <a href="http://www.linkedin.com/in/charlenaortiz"><img src="images/linkedin.png"></a>       
             </div>
     </div>
 </div>
@@ -553,7 +556,8 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Marketing Director</span>
         <span class="snippet">Often mistaken for an intern, Mike manages employee communications at VMware.</span>
             <div class="small-social">
-                <a href="http://www.twitter.com/mewie"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="http://www.twitter.com/mewie"><img src="images/twitter-small.png" alt=""></a>  
+                <a href="http://www.linkedin.com/in/mklouie"><img src="images/linkedin.png"></a>      
             </div>
     </div>
 </div>
@@ -574,7 +578,8 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Communications Gal</span>
         <span class="snippet">Digital media and brand engagement makes Wandia's life full of awesomeness.</span>
             <div class="small-social">
-                <a href="https://twitter.com/Wandia_Info"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="https://twitter.com/Wandia_Info"><img src="images/twitter-small.png" alt=""></a> 
+                <a href="http://www.linkedin.com/in/wandia"><img src="images/linkedin.png"></a>      
             </div>
     </div>
 </div>
@@ -588,7 +593,8 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Operations Guru</span>
         <span class="snippet">Rick geeks out on big data for Facebook and protects the ELEO Team with his Krav Maga training.</span>
             <div class="small-social">
-                <a href="http://www.twitter.com/ricklapointe"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="http://www.twitter.com/ricklapointe"><img src="images/twitter-small.png" alt=""></a>  
+                <a href="http://www.linkedin.com/in/ricklapointe"><img src="images/linkedin.png"></a>     
             </div>
     </div>
 </div>
@@ -599,7 +605,8 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Volunteer for Volunteers</span>
         <span class="snippet">Lindsey helps EdTech products develop so that students learn better.</span>
             <div class="small-social">
-                <a href=" http://www.twitter.com/lindsey_oh"><img src="images/twitter-small.png" alt=""></a>       
+                <a href=" http://www.twitter.com/lindsey_oh"><img src="images/twitter-small.png" alt=""></a> 
+                <a href="http://www.linkedin.com/in/lindseyoh"><img src="images/linkedin.png"></a>       
             </div>
     </div>
 </div>
