--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="block content-960 center-relative">
             <h2 class="section-title montserrat-font">SPEAKERS</h2>
             <div class="title-separator"></div> 
-            <p class="info bottom-100">At ELEO, you won’t learn theory, but practical advice about how to run your company or organization. You will learn from top venture capitalists, Fortune 500 CEOs, serial entrepreneurs and everyone in-between. </p>
+            <p class="info bottom-100">At ELEO, you won’t learn theory, but practical advice about how to lead your company or organization. You will learn from top venture capitalists, Fortune 500 CEOs, serial entrepreneurs and everyone in-between. </p>
 
             <div class="one_half">
                 <ul class="gallery image_slider">
@@ -309,9 +309,9 @@
             </div>
             <div class="clear"></div>
             <div class="one_half" style="color:white;">
-                        <p class="info bottom-20" style="color:white;">ELEO will donate all proceeds to third world medical treatments via Watsi </p>       
+                        <p class="info bottom-20" style="color:white;">ELEO will donate to third world medical treatments via Watsi </p>       
 
-                Watsi is a global crowdfunding platform for healthcare that enables anyone to donate as little as $5 to directly fund life-changing medical care for people in need. 100% of every donation funds medical care and they are dedicated to complete transparency. ELEO is partnering with Watsi to donate all proceeds from the conference to fund life-changing healthcare for people around the world.
+                Watsi is a global crowdfunding platform for healthcare that enables anyone to donate as little as $5 to directly fund life-changing medical care for people in need. 100% of every donation funds medical care and they are dedicated to complete transparency. ELEO is partnering with Watsi to donate to fund life-changing healthcare for people around the world.
                 <br /><br />             
             </div>
 
