--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
                     <p><b>EARLY BIRD DISCOUNT</b></p>
                 </div>
                 <div class="pricing-content">
-                    <p class="top-50 bottom-50" style="font-weight: bold; color: #4abd92; font-size: 5EM;">$25</p>
-                    <p>General Admission is $50<br /><b>Early Bird Rate Ends on June 20th</b></p>
+                    <p class="top-50 bottom-50" style="font-weight: bold; color: #4abd92; font-size: 5EM;">$50</p>
+                    <p>Limited Seating</b></p>
                     <img src="images/eventbrite.png" style="margin:25px 0 -25px 0;">
                 </div>
             </div>
