--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="title-separator"></div>                     
                     <div class="one_half top-20">
                         <p class="info bottom-20">Inspiring and Equipping Entrepreneurs to Lead</p>
-                        ELEO is unique among tech conference in the Valley. Instead of talking fundraising, pitching, or the X's and O's of running a company, we focus on something more fundamental: Leadership. We believe that every startup needs strong leadership, and that it can be learned and honed over time. 
+                        ELEO is unique among tech conferences in the Valley. Instead of talking fundraising, pitching, or the X's and O's of running a company, we focus on something more fundamental: Leadership. We believe that every startup needs strong leadership, and that it can be learned and honed over time. 
                         <br>
                         <br>
                         ELEO 2014 is our second year in bringing experienced entrepreneurial leaders from around the Valley.  
@@ -493,11 +493,11 @@
 
             <div class="pricing-holder">                                            
                 <div class="pricing-header">
-                    <p><b>EARLY BIRD DISCOUNT</b></p>
+                    <p><b>CLAIM YOUR SPOT TODAY</b></p>
                 </div>
                 <div class="pricing-content">
                     <p class="top-50 bottom-50" style="font-weight: bold; color: #4abd92; font-size: 5EM;">$50</p>
-                    <p>Limited Seating</b></p>
+                    <p>General Admission</b></p>
                     <img src="images/eventbrite.png" style="margin:25px 0 -25px 0;">
                 </div>
             </div>
