--- a/adriana-gascoigne.html
+++ b/adriana-gascoigne.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Victor Ho : ELEO Conference</title>
+    <title>Adriana Gascoigne: ELEO Conference</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="ELEO Conference - Inspiring and Equipping Entrepreneurs to Lead" />
     <meta name="keywords" content="leadership, entrepreneur, silicon valley, san jose, conference, yahoo, facebook, google, vc, community, meetup" />
@@ -36,24 +36,23 @@
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" class="close-x"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="carol-realini.html" class="button green slow-scroll"><</a><a href="tim-howes.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="maria-zhang.html" class="button green slow-scroll"><</a><a href="brad-lomenick.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
-                        <img src="images/victor-ho.jpg" alt="" />
-                        <h1 class="single-blog-title montserrat-font top-20">VICTOR HO</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder & CEO, Fivestars</li></ul> 
+                        <img src="images/adriana-gascoigne.jpg" alt="" />
+                        <h1 class="single-blog-title montserrat-font top-20">ADRIANA GASCOIGNE</h1>
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Partner at Founders Den</li></ul> 
                         
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                    Victor Ho is the CEO and co-founder of FiveStars, the largest loyalty program for local businesses in the US. FiveStars originally launched out of Y Combinator’s Winter 2011 class, and has raised $19 million in outside funding.
-                    <br/>
-                    <br/>
-                    Prior to starting FiveStars, Victor was an investment banker at Goldman Sachs within the Financial Institutions Group. He then joined McKinsey & Company as a management consultant in New York. At McKinsey, Victor helped build out loyalty programs and managed customer retention programs for Fortune 500 companies.
-                    <br/>
-                    <br/>
-                    Victor holds three degrees from the University of California, Berkeley, where he tripled majored in Industrial Engineering, Rhetoric and Business Administration. In 2012, he was named to Fortune's "30 Under 30 in Technology". Victor has an insatiable love for sour candy and can solve a Rubik's cube in 45 seconds.
+                        Adriana is the founder and CEO of Girls in Tech, a non-profit organization, which she launched in February 2007. As a woman in tech, Adriana’s passion lies in bolstering opportunities around the empowerment, engagement and education of women in tech. Previously, Adriana worked as the Vice President of Marketing at SecondMarket, the global marketplace for illiquid assets. She was responsible for SecondMarket’s marketing, branding strategy, event production and digital media efforts. 
+                        <br />
+                        <br />
+                        Adriana has spearheaded marketing, communications and analytics at a variety of technology start-ups including hi5 and SocialGamingNetwork (SGN) as well as Ogilvy Public Relations Worldwide where she was the Vice President of 360 Digital Influence. She is an “Intel Insider,” serving as a brand and product advisor for Intel.
                     </div>
+
+
                 </div>
 
             </div>
@@ -80,7 +79,7 @@
             <script type="text/javascript" src="js/jquery.vticker-min.js"></script>
             <script type="text/javascript" src="php/scriptsData.php"></script>
             <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>		
-            <script type="text/javascript" src="js/main.js"></script>	
+            <script type="text/javascript" src="js/main.js"></script>
 
             <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -91,6 +90,6 @@
   ga('create', 'UA-51481476-1', 'eleoconference.com');
   ga('send', 'pageview');
 
-</script>	
+</script>		
         </body>
         </html>
