--- a/andy-wood.html
+++ b/andy-wood.html
@@ -36,7 +36,7 @@
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" class="close-x"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="brad-lomenick.html" class="button green slow-scroll"><</a><a href="david-lane.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="brad-lomenick.html" class="button green slow-scroll"><</a><a href="jesse-draper.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
                         <img src="images/andy-wood.jpg" alt="" />
