--- a/brad-lomenick.html
+++ b/brad-lomenick.html
@@ -36,7 +36,7 @@
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" class="close-x"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="maria-zhang.html" class="button green slow-scroll"><</a><a href="andy-wood.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="adriana-gascoigne.html" class="button green slow-scroll"><</a><a href="andy-wood.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
                         <img src="images/brad-lomenick.jpg" alt="" />
