--- a/david-lane.html
+++ b/david-lane.html
@@ -36,7 +36,7 @@
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" class="close-x"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="andy-wood.html" class="button green slow-scroll"><</a><a href="victor-ho.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="tim-howes.html" class="button green slow-scroll"><</a><a href="pat.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
                         <img src="images/david-lane.jpg" alt="" />
