--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
             <div class="clear"></div>
             
             <div class="one_half">
-                <!--<ul class="gallery image_slider">
-                <li style="width: 100%">-->
+                <ul class="gallery image_slider">
+                <li style="width: 100%">
                     <img src="images/adriana-gascoigne.jpg" alt="">    
-                    <!--<a class="preview absolute shadow" href="brad-lomenick.html" style="height: 360px; display: none; opacity: 0.75;"> 
+                    <a class="preview absolute shadow" href="adriana-gascoigne.html" style="height: 360px; display: none; opacity: 0.75;"> 
                         <span class="work_item_text" style="top: 165px;">READ BIO</span>
                     </a>                           
                 </li>
-                </ul>-->
+                </ul>
                 <h1 class="single-blog-title montserrat-font top-20">ADRIANA GASCOIGNE</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Partner at Founders Den</li></ul>
                 As a woman in tech, Adriana’s passion lies in bolstering opportunities around the empowerment, engagement and education of women in tech. 
@@ -249,14 +249,14 @@
                 Andy is passionate about training leaders, teaching the message of Jesus in relevant ways, and doing church in a way that resonates with who people who don't typically enjoy church. <a href="andy-wood.html">Learn More</a>
             </div>
             <div class="one_half last">
-                <!--<ul class="gallery image_slider">
-                <li style="width: 100%">-->
+                <ul class="gallery image_slider">
+                <li style="width: 100%">
                     <img src="images/jesse-draper.jpg" alt="">    
-                    <!--<a class="preview absolute shadow" href="andy-wood.html" style="height: 360px; display: none; opacity: 0.75;"> 
+                    <a class="preview absolute shadow" href="jesse-draper.html" style="height: 360px; display: none; opacity: 0.75;"> 
                         <span class="work_item_text" style="top: 165px;">READ BIO</span>
                     </a>                           
                 </li>
-                </ul>-->
+                </ul>
                 <h1 class="single-blog-title montserrat-font top-20">JESSE DRAPER</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Founder and Host, The Valley Girl Show</li></ul>
                 Andy is passionate about training leaders, teaching the message of Jesus in relevant ways, and doing church in a way that resonates with who people who don't typically enjoy church. 
@@ -264,14 +264,14 @@
             <div class="clear"></div>
             
             <div class="one_half">
-                <!--<ul class="gallery image_slider">
-                <li style="width: 100%">-->
+                <ul class="gallery image_slider">
+                <li style="width: 100%">
                     <img src="images/carol-realini.jpg" alt="">    
-                   <!-- <a class="preview absolute shadow" href="david-lane.html" style="height: 360px; display: none; opacity: 0.75;"> 
+                   <a class="preview absolute shadow" href="carol-realini.html" style="height: 360px; display: none; opacity: 0.75;"> 
                         <span class="work_item_text" style="top: 165px;">READ BIO</span>
                     </a>                           
                 </li>
-                </ul>-->
+                </ul>
                 <h1 class="single-blog-title montserrat-font top-20">CAROL REALINI</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">CEO & Founder Obopay</li></ul>
                 Banking pioneer, author, serial entrepreneur, and leading innovator in mobile payments, and changed the landscape of banking technology.
