--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </ul>
                 <h1 class="single-blog-title montserrat-font top-20">JESSE DRAPER</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Founder and Host, The Valley Girl Show</li></ul>
-                Andy is passionate about training leaders, teaching the message of Jesus in relevant ways, and doing church in a way that resonates with who people who don't typically enjoy church. 
+                The Valley Girl Show features interviews with big-name business and tech personalities, such as Facebook's Sheryl Sandberg, Foursquare's Dennis Crowley and more (the show is syndicated on Mashable). 
             </div>
             <div class="clear"></div>
             
