--- a/index.html
+++ b/index.html
@@ -451,6 +451,9 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>WOMEN IN TECH</h2>
+                <p>Adriana Gascoigne [Partner, Founders Den]</p>
+                <p>Carol Realini, CEO & Founder, Obopay]
+                <p>Jesse Draper [Founder, Valley Girl Show]</p>
                 <p>Maria Zhang [Founder & CEO, Alike]</p>
             </div>
         </li>
