--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>THE DNA OF A LEADER</h2>
-                <p>Andy Wood [ Lead Pastor, South Bay Church ]</p>
+                <p>Andy Wood <span style="color:#5F6D79;">[ Lead Pastor, South Bay Church ]</span></p>
             </div>
         </li>
         <li>
@@ -408,8 +408,8 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>STARTUP WAR STORIES</h2>
-                <p>Tim Howes [ Founder & CTO, Rockmelt ]</p>
-                <p>Victor Ho [ Founder & CEO, Fivestars ]</p>
+                <p>Tim Howes <span style="color:#5F6D79;">[ Founder & CTO, Rockmelt ]</span></p>
+                <p>Victor Ho <span style="color:#5F6D79;">[ Founder & CEO, Fivestars ]</span></p>
             </div>
         </li>
         <li>
@@ -417,9 +417,9 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>VC Panel</h2>
-                <p>Kevin Compton [ Partner, Radar Partners ]</p>
-                <p>Chi-Hua Chien [ Partner, KPCB ]</p>
-                <p>David Lane [ Partner, Diamondhead Ventures ]</p>
+                <p>Kevin Compton <span style="color:#5F6D79;">[ Partner, Radar Partners ]</span></p>
+                <p>Chi-Hua Chien <span style="color:#5F6D79;">[ Partner, KPCB ]</span></p>
+                <p>David Lane <span style="color:#5F6D79;">[ Partner, Diamondhead Ventures ]</span></p>
             </div>
         </li>
         <li>
@@ -443,7 +443,7 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>THE CATALYST LEADER</h2>
-                <p>Brad Lomenick [ President, Catalyst ]</p>
+                <p>Brad Lomenick <span style="color:#5F6D79;">[ President, Catalyst ]</span></p>
             </div>
         </li>
         <li>
@@ -451,10 +451,10 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>WOMEN IN TECH</h2>
-                <p>Adriana Gascoigne [ Partner, Founders Den ]</p>
-                <p>Carol Realini, [ CEO & Founder, Obopay ]
-                <p>Jesse Draper [ Founder, Valley Girl Show ]</p>
-                <p>Maria Zhang [ Founder & CEO, Alike ]</p>
+                <p>Adriana Gascoigne <span style="color:#5F6D79;">[ Partner, Founders Den ]</span></p>
+                <p>Carol Realini <span style="color:#5F6D79;">[ CEO & Founder, Obopay ]</span></p>
+                <p>Jesse Draper <span style="color:#5F6D79;">[ Founder, Valley Girl Show ]</span></p>
+                <p>Maria Zhang <span style="color:#5F6D79;">[ Founder & CEO, Alike ]</span></p>
             </div>
         </li>
         <li>
@@ -462,7 +462,7 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>KEYNOTE</h2>
-                <p>Pat Gelsinger [ CEO, VMWare ]</p>
+                <p>Pat Gelsinger <span style="color:#5F6D79;">[ CEO, VMWare ]</span></p>
             </div>
         </li>
         <li>
