updated carol page

--- a/carol-realini.html
+++ b/carol-realini.html
@@ -41,10 +41,11 @@
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                        Draper grew up in Silicon Valley (her dad is the legendary VC Tim Draper) and started her career as a co-star on Nickelodeon show The Naked Brothers Band, created and produced by her aunt, Polly Draper. Soon afterward, she launched a web series, “The Valley Girl Show” featuring interviews with big-name business and tech personalities, such as Facebook's Sheryl Sandberg, Foursquare's Dennis Crowley and more (the show is syndicated on Mashable).  
+                        Banking pioneer, author, serial entrepreneur, and leading innovator in mobile payments, Carol Realini is an imaginative pioneer whose foresight and business acumen have changed the landscape of banking technology, and whose global vision is providing hope and a future for people in developing countries. 
                         <br />
                         <br />
-                        In 2010, Draper's company, Valley Girl Media Network, purchased Lalawag, a tech and culture blog in Los Angeles.
+                        Through partnerships with financial institutions such as Citi and MasterCard and mobile carriers — Carol has created breakthrough solutions that use mobile phones to deliver financial services that empower people’s life and work.  
+                      
                     </div>
 
 
