change button to point to eventbrite

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                           <p class="info top-30">Saturday, July 26th | One-day Conference | San Jose, California</p>                          
 
                           <div class="top-150">
-                              <a href="#register" class="button green slow-scroll">Register Now</a>
+                              <a href="https://eleoconference.eventbrite.com" class="button green slow-scroll">Register Now</a>
                           </div>
 
                           <div class="top-50"><a href="#about"><img src="images/arrow-animation.gif" style="border:none;"></a></div>
