--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 </div>
                 <div class="pricing-content">
                     <p class="top-50 bottom-50" style="font-weight: bold; color: #4abd92; font-size: 5EM;">$50</p>
-                    <p>General Admission</b></p>
+                    <p>General Admission</b> <br />Register by July 4th to get a FREE T-Shirt</p>
                     <img src="images/eventbrite.png" style="margin:25px 0 -25px 0;">
                 </div>
             </div>
