--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
             <div class="cbp_tmicon"></div>
             <div class="cbp_tmlabel">
                 <h2>STARTUP WAR STORIES</h2>
+                <p>Paul Montoy-Wilson <span style="color:#5F6D79;">[ Founder, Aviate ]</span></p>
                 <p>Tim Howes <span style="color:#5F6D79;">[ Founder & CTO, Rockmelt ]</span></p>
                 <p>Victor Ho <span style="color:#5F6D79;">[ Founder & CEO, Fivestars ]</span></p>
             </div>
