--- a/index.html
+++ b/index.html
@@ -266,15 +266,15 @@
             <div class="one_half">
                 <ul class="gallery image_slider">
                 <li style="width: 100%">
-                    <img src="images/carol-realini.jpg" alt="">    
+                    <img src="images/paul.jpg" alt="">    
                    <a class="preview absolute shadow" href="carol-realini.html" style="height: 360px; display: none; opacity: 0.75;"> 
-                        <span class="work_item_text" style="top: 165px;">READ BIO</span>
+                        <span class="work_item_text" style="top: 165px;"></span>
                     </a>                           
                 </li>
                 </ul>
-                <h1 class="single-blog-title montserrat-font top-20">CAROL REALINI</h1>
-                <ul class="date-author-likes-holder bottom-20"><li class="date">CEO & Founder Obopay</li></ul>
-                Banking pioneer, author, serial entrepreneur, and leading innovator in mobile payments, and changed the landscape of banking technology.
+                <h1 class="single-blog-title montserrat-font top-20">PAUL MONTOY-WILSON</h1>
+                <ul class="date-author-likes-holder bottom-20"><li class="date">Co-founder, Aviate</li></ul>
+                Aviate is a launcher for your Android that will simplify how you use your phone. It removes clutter, automatically organizes your apps and knows when to show you the information you need, at the time it’s useful for you.
             </div>
             <div class="one_half last">
                 <ul class="gallery image_slider">
@@ -409,7 +409,7 @@
             <div class="cbp_tmlabel">
                 <h2>STARTUP WAR STORIES</h2>
                 <!--<p>Paul Montoy-Wilson <span style="color:#5F6D79;">[ Founder, Aviate ]</span></p>-->
-                <p>Paul Montoy-Wilson <span style="color:#5F6D79;">[ Founder, Aviate ]</span></p>
+                <p>Paul Montoy-Wilson <span style="color:#5F6D79;">[ Co-founder, Aviate ]</span></p>
                 <p>Tim Howes <span style="color:#5F6D79;">[ Founder & CTO, Rockmelt ]</span></p>
                 <p>Victor Ho <span style="color:#5F6D79;">[ Founder & CEO, Fivestars ]</span></p>
             </div>
