--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </li>
                 </ul>
                 <h1 class="single-blog-title montserrat-font top-20">ADRIANA GASCOIGNE</h1>
-                <ul class="date-author-likes-holder bottom-20"><li class="date">Partner at Founders Den</li></ul>
+                <ul class="date-author-likes-holder bottom-20"><li class="date">Partner at Founders Den, <br />Founder of Girls in Tech</li></ul>
                 As a woman in tech, Adriana’s passion lies in bolstering opportunities around the empowerment, engagement and education of women in tech. 
             </div>
             <div class="one_half last">
